--- a/app/src/main/res/layout/activity_add_subscription.xml
+++ b/app/src/main/res/layout/activity_add_subscription.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.coursauxsubbook.addSubscription">
+    tools:context="com.example.coursauxsubbook.subscriptionPage">
 
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="495dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
             android:id="@+id/NmaeFill"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Subscription Name"
             tools:text="Subscription Name" />
 
         <EditText
@@ -75,8 +75,8 @@
             android:id="@+id/CommitSubscription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add"
-            android:onClick="ChangePage"/>
+            android:onClick="ChangePageBack"
+            android:text="Add" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
