--- a/app/src/main/res/layout/sub_info.xml
+++ b/app/src/main/res/layout/sub_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,10 +10,10 @@
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="495dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +28,7 @@
             tools:text="Subscription Name" />
 
         <EditText
-            android:id="@+id/NameFill"
+            android:id="@+id/NameEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -40,7 +41,7 @@
             android:text="Date" />
 
         <EditText
-            android:id="@+id/DateFill"
+            android:id="@+id/DateEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -52,7 +53,7 @@
             android:text="Price" />
 
         <EditText
-            android:id="@+id/PriceFill"
+            android:id="@+id/PriceEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -65,18 +66,24 @@
             android:text="Comment (optional)" />
 
         <EditText
-            android:id="@+id/CommentFill"
+            android:id="@+id/CommentEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName" />
 
         <Button
-            android:id="@+id/CommitSubscription"
+            android:id="@+id/EditSubscription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="ChangePageBack"
-            android:text="Add" />
+            android:text="Edit" />
+
+        <Button
+            android:id="@+id/Delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delete" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
